# InChat

./: .gitignore  Dockerfile  LICENSE  README.Roy.md  README.md  db-del-user.py  dbtest-noname-user.py  dbtest-sql.py  dbtest-vec.py  do.alembic.autogenerate.sh  do.alembic.stamp.sh  do.backup.sh  do.docker.build.sh  do.docker.fastapi.run-as-daemon.sh  do.docker.fastapi.run-in-term.sh  do.docker.fastapi.stop.sh  do.docker.postgres-vect.run-as-daemon.sh  do.docker.postgres-vect.run-in-term.sh  do.docker.postgres-vect.stop.sh  do.docker.run-as-daemon.sh  do.docker.run-bash.sh  do.docker.run-in-term.sh  do.poetry.export.requirements.sh  do.run.sh  example.env  main.py  main.sh  main1.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 43d7289cdf26_change_mesage_text_string_300_field_to_.py  5f073a048fb7_base_chat_implemetation.py  91b600bdd5cd_11_01_2024_15_06_29.py  a28dd0ebc09d_authorization.py  c5331cc8b103_10_01_2024_20_27_28.py  e18b23480cdf_base_pdf_mapping.py  e393aa971f62_07_01_2024_14_51_02.py
src/: config.py
src/inchat/auth/: routes.py  schemas.py  service.py
src/inchat/chat/: repository.py  routes.py  schemas.py  schemas_new.py
src/inchat/chat/service/: chain.py  history.py
src/inchat/database/sql/: models.py  models.py.0rig  postgres.py
src/inchat/pdf/: repository.py  routes.py  schemas.py
src/inchat/pdf/service/: local_save.py  process.py  process_pdf.py  vectorize.py
